empty date alignment fix

--- a/media/davewhipp-print.css
+++ b/media/davewhipp-print.css
@@ -189,6 +189,9 @@ strong {
 	display: none;
 	visibility: hidden;
 }
+h2+ul {
+    margin-top: 2px;
+}
 
 
 
