--- a/media/davewhipp-screen.css
+++ b/media/davewhipp-screen.css
@@ -187,7 +187,9 @@ strong {
 	display: none;
 }
 
-
+h2+ul {
+    margin-top: 2px;
+}
 
 /*
 @media only screen and (max-width: 480px) {
