--- a/media/kjhealy-print.css
+++ b/media/kjhealy-print.css
@@ -188,7 +188,9 @@ strong {
 	display: none;
 	visibility: hidden;
 }
-
+h2+ul {
+    margin-top: 2px;
+}
 
 
 
